--- a/devto/cluster_devto_articles.ipynb
+++ b/devto/cluster_devto_articles.ipynb
@@ -30,6 +30,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## languages\n",
+    "Filter out other languages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from langdetect import detect\n",
+    "from langdetect.detector import LangDetectException\n",
+    "\n",
+    "def lang_for_row(row):\n",
+    "    lang = None\n",
+    "    try:\n",
+    "        lang = detect(row[\"content\"])\n",
+    "    except LangDetectException as e:\n",
+    "#         print(\"caught\")\n",
+    "    return lang\n",
+    "df['lang'] = df.apply(lang_for_row, axis=1)\n",
+    "df.head()\n",
+    "before = len(df.index)\n",
+    "df = df[df['lang'] == 'en']\n",
+    "after = len(df.index)\n",
+    "print(\"removed %d rows because detected as not English\" % (before-after))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## create tokens"
    ]
   },
@@ -45,7 +79,8 @@
     "tokenizer = WhitespaceTokenizer()\n",
     "\n",
     "def tokenize(row):\n",
-    "    row['tokens'] = tokenizer.tokenize(row['content'])\n",
+    "    tokens = tokenizer.tokenize(row['content'])\n",
+    "    row['tokens'] = [str.lower(token) for token in tokens]\n",
     "    return row\n",
     "\n",
     "df = df.apply(tokenize, axis=1)\n",
@@ -85,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## lowercase and stemming"
+    "## [stemming]"
    ]
   },
   {
@@ -125,9 +160,10 @@
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer, HashingVectorizer, TfidfVectorizer\n",
     "# vectorizer = HashingVectorizer(alternate_sign=False, norm='l2', binary=False)\n",
-    "vectorizer = TfidfVectorizer(max_df=0.5, min_df=2, use_idf=True)\n",
+    "vectorizer = TfidfVectorizer(max_df=0.5, min_df=4, use_idf=True)\n",
     "df['features'] = df.apply(lambda row: ' '.join(row['tokens']), axis=1)\n",
     "X = vectorizer.fit_transform(df['features'])\n",
+    "df.head()\n",
     "X.shape"
    ]
   },
@@ -139,9 +175,9 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split \n",
-    "y = df['tag']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
+    "# from sklearn.model_selection import train_test_split \n",
+    "# y = df['tag']\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
    ]
   },
   {
@@ -159,9 +195,9 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "bayes = GaussianNB()\n",
-    "model = bayes.fit(X_train.toarray(), y_train)"
+    "# from sklearn.naive_bayes import GaussianNB\n",
+    "# bayes = GaussianNB()\n",
+    "# model = bayes.fit(X_train.toarray(), y_train)"
    ]
   },
   {
@@ -179,9 +215,9 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import classification_report\n",
-    "y_pred = model.predict(X_test.toarray())\n",
-    "print(classification_report(y_test, y_pred))"
+    "# from sklearn.metrics import classification_report\n",
+    "# y_pred = model.predict(X_test.toarray())\n",
+    "# print(classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -210,14 +246,14 @@
     "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.pipeline import make_pipeline\n",
     "\n",
-    "svd = TruncatedSVD(50)\n",
+    "svd = TruncatedSVD(1000)\n",
     "normalizer = Normalizer(copy=False)\n",
     "lsa = make_pipeline(svd, normalizer)\n",
     "# lsa = make_pipeline(normalizer)\n",
     "\n",
     "\n",
-    "# X_norm = lsa.fit_transform(X)\n",
-    "X_norm = X\n"
+    "X_norm = lsa.fit_transform(X)\n",
+    "# X_norm = X"
    ]
   },
   {
@@ -235,14 +271,28 @@
    },
    "outputs": [],
    "source": [
-    "NO_OF_CLUSTERS=4\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
-    "kmeans = KMeans(n_clusters=NO_OF_CLUSTERS, init='k-means++', max_iter=100, n_init=50, random_state=0, n_jobs=-1, verbose=2).fit(X_norm)\n",
-    "y_pred = kmeans.predict(X_norm)\n",
+    "\n",
+    "K = range(1,30,3)\n",
+    "distortions = []\n",
+    "for k in K:\n",
+    "    kmeans_for_k = KMeans(n_clusters=k,  random_state=0, n_jobs=-1, verbose=2).fit(X)\n",
+    "#     kmeans = KMeans(n_clusters=NO_OF_CLUSTERS, init='k-means++', max_iter=100, n_init=50, random_state=0, n_jobs=-1, verbose=2).fit(X_norm)\n",
+    "    distortion = kmeans_for_k.inertia_\n",
+    "    distortions.append(distortion)\n",
+    "    \n",
+    "\n",
+    "#     y_pred = kmeans.predict(X_norm)\n",
     "# y_pred_proba = kmeans.predict_proba(X_norm)\n",
     "\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "accuracy_score(y, y_pred)"
+    "\n",
+    "plt.plot(K, distortions, 'bx-')\n",
+    "plt.xlabel('k')\n",
+    "plt.ylabel('Sum of Squared Errors')\n",
+    "plt.title('The Elbow Method showing the optimal k')\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -256,29 +306,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "\n",
-    "NO_OF_CLUSTERS=4\n",
+    "NO_OF_CLUSTERS=2\n",
+    "TOP_ELEMENT_COUNT=40\n",
+    "kmeans_for_k = KMeans(n_clusters=NO_OF_CLUSTERS,  random_state=0, n_jobs=-1, verbose=2).fit(X)\n",
     "from wordcloud import WordCloud\n",
     "import matplotlib.pyplot as plt\n",
-    "centroids = kmeans.cluster_centers_.argsort()[:, ::-1]\n",
-    "# centroids\n",
+    "centroids = kmeans_for_k.cluster_centers_.argsort()[:, ::-1]\n",
     "terms = vectorizer.get_feature_names()\n",
     "for n in range(NO_OF_CLUSTERS):\n",
     "    print(\"cluster %d\" % n)\n",
-    "    elems = []\n",
-    "    for index in centroids[n, :20]:\n",
-    "        elems.append(terms[index])\n",
+    "    elems = [terms[index] for index in centroids[n, :TOP_ELEMENT_COUNT]]\n",
     "    wc = WordCloud().generate(' '.join(elems))\n",
     "    plt.imshow(wc, interpolation='bilinear')\n",
     "    plt.axis(\"off\")\n",
-    "    plt.show()\n",
-    "#     wc.show()\n",
-    "# kmeans.cluster_centers_\n",
-    "# X_norm"
+    "    plt.show()"
    ]
   },
   {
@@ -296,30 +342,14 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.manifold import TSNE\n",
-    "from sklearn.decomposition import PCA\n",
+    "# from sklearn.manifold import TSNE\n",
+    "# from sklearn.decomposition import PCA\n",
     "\n",
-    "tsne = TSNE(n_components=2, init='pca', random_state=0)\n",
-    "X_tsne = tsne.fit_transform(X_norm.toarray())\n",
-    "df['x-tsne'] = X_tsne[:,0]\n",
-    "df['y-tsne'] = X_tsne[:,1]\n",
-    "df['prediction'] = y_pred\n",
-    "from ggplot import *\n",
-    "chart = ggplot( df, aes(x='x-tsne', y='y-tsne', color='prediction'))  + geom_point(size=100,alpha=0.1)  + scale_color_hue(l=40, c=35)\n",
-    "chart"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "chart = ggplot( df, aes(x='x-tsne', y='y-tsne', color='prediction'))  + geom_point(size=100,alpha=0.1)  + scale_color_brewer(type='diverging', palette=4)\n",
-    "\n",
-    "chart"
+    "# tsne = TSNE(n_components=2, init='pca', random_state=0)\n",
+    "# X_tsne = tsne.fit_transform(X_norm.toarray())\n",
+    "# df['x-tsne'] = X_tsne[:,0]\n",
+    "# df['y-tsne'] = X_tsne[:,1]\n",
+    "# df['prediction'] = y_pred\n"
    ]
   }
  ],
